--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-ss
+<!DOCTYPE html>
+<html>
+ <head>
+    <title>tztv</title>
+ </head>
+	
+ <body>
+	<img src="tztv.png">
+
+ </body>
+
+</html>
+
+<style>
+body {
+    background: #0047ffff;
+}
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+</style>
