--- a/index.html
+++ b/index.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
-<html>
- <head>
-    <title>tztv</title>
- </head>
-	
- <body>
-	<img src="tztv.png">
-
- </body>
-
-</html>
-
+<html lang="pt-br">
+<title>Não entre</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<body>
+<h1>FALEI PARA NÃO ENTRAR<img src="ragey.png"></H1>
+</body>
 <style>
 body {
-    background: #0047ffff;
+    margin: 0px;
+    width: 100%;
+    height: 100%;
+    background: #008fe2;
+}
+
+h1 {
+    margin: 0px;
+    color: white;
+    font-family: Roboto,sans-serif;
+    font-weight: 900;
+    text-align: center;
+    padding-top: 50px;
 }
 
 img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
+    width: 25px;
+    margin-left: 5px;
 }
+
 </style>
