--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<title>Não entre</title>
+<title>TZTV</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <body>
-<h1>FALEI PARA NÃO ENTRAR<img src="ragey.png"></H1>
+<h1>Ligando os motores...</H1>
 </body>
 <style>
 body {
