--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <body>
-<h1>Ligando os motores...</H1>
+<h1>Aquecendo os motores...</H1>
 </body>
 <style>
 body {
     margin: 0px;
     width: 100%;
     height: 100%;
-    background: #008fe2;
+    background: #006eff;
 }
 
 h1 {
