--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <body>
-<h1>Aquecendo os motores...</H1>
+<h1>A versão beta estará chegando dentro de alguns dias...</H1>
 </body>
 <style>
 body {
